# oqae

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  PROJECT_PLAN.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-fix.yml  auto-format.yml  ci.yml
configs/: train_toy.yaml
docs/: DEVELOPMENT_WORKFLOW.md  PROJECT_PLAN.md  STATUS.md  SYSTEM_MONITORING.md  WORKFLOW_MONITORING.md  benchmark_report.md
docs/source/: api.rst  conf.py  getting_started.rst  index.rst
examples/: 01_train_local_anndata.py  02_inspect_and_generate_codes.py  03_census_streaming.py  04_benchmark_configs.py  05_benchmark_report.py  06_census_throughput.py  07_latent_quality.py  README.md  compare_scvi.py  synthetic_data.py  system_monitoring_example.py
scripts/: auto_fix_workflow.py  check_workflows.py  robust_github_cli.py  setup_template.py  test_system_monitor.py
src/: __init__.py  calculator.py
src/omvqvae/: __init__.py  hf_utils.py
src/omvqvae/benchmark/: __init__.py  baselines.py  clustering.py  harness.py  metrics.py  report.py  throughput.py  viz.py
src/omvqvae/data/: __init__.py  anndata_io.py  census.py  dataset.py  normalize.py
src/omvqvae/inference/: __init__.py  codes.py
src/omvqvae/layers/: __init__.py  residual_vq.py
src/omvqvae/models/: __init__.py  likelihoods.py  vqvae.py
src/omvqvae/train/: __init__.py  cli.py  loop.py
src/omvqvae/utils/: __init__.py  logging.py  system_monitor.py  tracking.py
tests/: __init__.py  test_benchmark_report.py  test_calculator.py  test_examples.py  test_hf_utils.py  test_logging.py  test_system_monitor.py  test_system_monitor_advanced.py  test_system_monitor_coverage.py  test_system_monitor_integration.py
tests/benchmark/: test_baselines.py  test_clustering.py  test_harness.py  test_metrics.py  test_throughput.py  test_viz.py
tests/data/: conftest.py  test_anndata_io.py  test_census.py  test_dataset.py  test_normalize.py
tests/inference/: test_codes.py
tests/layers/: test_residual_vq.py
tests/models/: test_likelihoods.py  test_vqvae.py
tests/train/: test_cli.py  test_loop.py
tests/utils/: test_tracking.py
