[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oqae"
version = "0.1.0"
description = "OQAE: Omics Quantized Auto Encoder - A lightweight VQ-VAE library for omics data"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "mengerj", email = "mengerj@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.11"
dependencies = [
    "torch>=2.12.1",
    "anndata>=0.12.0", # zarr-python v3 support
    "zarr>=3.0.0",
    "numpy>=1.21.0",
    "pandas>=1.5.0",
    "scipy>=1.9.0",
    "transformers>=4.20.0",
    # HuggingFace Hub model sharing — hf_utils.py
    "huggingface-hub>=0.20.0",
    "omegaconf>=2.3.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    # Experiment tracking
    "wandb>=0.21.0",
    # CELLxGENE Census streaming (TileDB-SOMA) — data/census.py
    "cellxgene-census>=1.15.0",
    "tiledbsoma>=1.12.0",
    "tiledbsoma-ml>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "autopep8>=2.0.0",
    "mypy>=1.5.0",
    "pytest>=9.0.3",
    "pytest-cov>=4.1.0",
    "pre-commit>=3.4.0",
    "coverage>=7.3.0",
]
docs = [
    "sphinx>=7.0.0",
    "furo>=2024.1.29",
]

[project.scripts]
oqae-train = "omvqvae.train.cli:main"

[project.urls]
Homepage = "https://github.com/mengerj/oqae"
Repository = "https://github.com/mengerj/oqae.git"
Issues = "https://github.com/mengerj/oqae/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["omvqvae"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
# Third-party libraries without bundled type stubs.
module = [
    "anndata.*",
    "scipy.*",
    "pandas.*",
    "cellxgene_census.*",
    "tiledbsoma.*",
    "tiledbsoma_ml.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
    "-m",
    "not network",
]
markers = [
    "network: tests that require network access (e.g. live CELLxGENE Census); skipped by default.",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
